objects/FLODocs__Metric__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__DLU_ApexClass__c</fullName>
        <label>DLU ApexClass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_ApexComponent__c</fullName>
        <label>DLU ApexComponent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_ApexPage__c</fullName>
        <label>DLU ApexPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_ApexTrigger__c</fullName>
        <label>DLU ApexTrigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_AuraDefinitionBundle__c</fullName>
        <label>DLU AuraDefinitionBundle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_CustomField__c</fullName>
        <label>DLU CustomField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_Dashboard__c</fullName>
        <label>DLU Dashboard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_Flow__c</fullName>
        <label>DLU Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_ListView__c</fullName>
        <label>DLU ListView</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_Report__c</fullName>
        <label>DLU Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_WorkflowRule__c</fullName>
        <label>DLU WorkflowRule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_Workflow__c</fullName>
        <label>DLU Workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Email_CC__c</fullName>
        <label>Email CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FLODocs__Email_To__c</fullName>
        <label>Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FLODocs__Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_ApexClass__c</fullName>
        <label>Total ApexClass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_ApexComponent__c</fullName>
        <label>Total ApexComponent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_ApexPage__c</fullName>
        <label>Total ApexPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_ApexTrigger__c</fullName>
        <label>Total ApexTrigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_AuraDefinitionBundle__c</fullName>
        <label>Total AuraDefinitionBundle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_CustomField__c</fullName>
        <label>Total CustomField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Dashboard__c</fullName>
        <label>Total Dashboard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Flow__c</fullName>
        <label>Total Flow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_ListView__c</fullName>
        <label>Total ListView</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Report__c</fullName>
        <label>Total Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_WorkflowRule__c</fullName>
        <label>Total WorkflowRule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Workflow__c</fullName>
        <label>Total Workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metric</label>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>